# feishu-management

./: .dockerignore  .gitignore  DEPLOY.md  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __main__.py  auth.py  config.py  db.py  feishu_bots.py  lark_client.py  main.py  secrets_store.py  security.py  workflow_events.py
backend/app/agent/: core.py  llm.py  prompts.py
backend/app/agent/tools/: __init__.py  base.py  bitable.py  chat.py  workflow.py
backend/app/api/: auth.py  bitables.py  chat.py  chats.py  settings.py  webhook.py  workflows.py
backend/app/engine/: dispatcher.py  executor.py  lark_ws.py  scheduler.py
backend/tests/: test_smoke.py
deploy/: production.env.example
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/src/: App.vue  style.css
web/src/api/: auth.ts  bitables.ts  chat.ts  chats.ts  client.ts  settings.ts  workflows.ts
web/src/components/chat/: ChatInput.vue  ConversationList.vue  DraftCard.vue  MessageBubble.vue  ToolCallChip.vue
web/src/components/layout/: AppShell.vue  SideBar.vue
web/src/components/ui/: Button.vue  Card.vue  GlassPanel.vue  Input.vue  ToastHost.vue
web/src/components/workflow/: CanvasNode.vue  Inspector.vue  NodePalette.vue  RunsDrawer.vue  nodeMeta.ts
web/src/router/: index.ts
web/src/stores/: auth.ts  chat.ts  toast.ts  workflows.ts
web/src/views/: Chat.vue  Login.vue  Settings.vue
web/src/views/Workflows/: Editor.vue  Index.vue
