[project]
name = "lark-automation-agent"
version = "0.1.0"
description = "AI 智能体 + 飞书自动化工作流"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "cryptography>=43",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
